crates/dasclaw_session/tests/snapshots/snapshot_wire__session_metadata_wire_format_is_stable.snap
---
source: crates/dasclaw_session/tests/snapshot_wire.rs
expression: meta
---
{
  "session_id": "session-1700000000000-0",
  "version": 1,
  "created_at_ms": 1700000000000,
  "updated_at_ms": 1700000000500,
  "model": "test-model"
}
