crates/dasclaw_session/tests/snapshots/snapshot_wire__session_snapshot_wire_format_is_stable.snap
---
source: crates/dasclaw_session/tests/snapshot_wire.rs
expression: snap
---
{
  "session_id": "session-1700000000000-0",
  "version": 1,
  "created_at_ms": 1700000000000,
  "updated_at_ms": 1700000000500,
  "model": "test-model",
  "messages": [
    {
      "role": "user",
      "content": "ping"
    },
    {
      "role": "assistant",
      "content": "pong"
    }
  ]
}
